# opengl-pong

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: minimath.h  raymath.h  render.h  utils.h
include/glad/: glad.h
res/shaders/: base.vs  circle.fs  rectangle.fs  textured.fs
src/: glad.c  main.c  render.c  utils.c
